--- a/dino.html
+++ b/dino.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+    <!-- Oi Hasan, não sei se há algum problema em deixar o caminho completo até os arquivos, mas caso haja, posso alterar! -->
     <html>
         <head>
             <meta charset="utf-8">
