--- a/dino.html
+++ b/dino.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-    <!-- Oi Hasan, não sei se há algum problema em deixar o caminho completo até os arquivos, mas caso haja, posso alterar! -->
     <html>
         <head>
             <meta charset="utf-8">
-            <link rel="icon" href="c:\Users\felip\Downloads\CEFET\Curso HTML, CSS, JS\cefet-front-end-dino-master\imgs\dino_icone.png">
-            <link rel="stylesheet" href="C:\Users\felip\Downloads\CEFET\Curso HTML, CSS, JS\cefet-front-end-dino-master\dino_estilo.css">
+            <link rel="icon" href="imgs/dino_icone.png">
+            <link rel="stylesheet" href="dino_estilo.css">
             <title>Dino-página</title>
         </head>
         <body>
@@ -32,7 +31,7 @@
                     <summary>
                         Filosossauro <Em>Philosauros comtemplus</Em>
                     </summary>
-                    <img src="c:\Users\felip\Downloads\CEFET\Curso HTML, CSS, JS\cefet-front-end-dino-master\imgs\filosossauro.jpg" alt="O dinossauro filósofo">
+                    <img src="imgs\filosossauro.jpg" alt="O dinossauro filósofo">
                     <p>
                         O <strong>Filosossauro</strong> era um dinossauro herbívoro peculiar, conhecido não apenas por seu tamanho imponente, mas também por seu comportamento contemplativo. 
                         Com uma cabeça grande, adornada com chifres curvados, ele passava horas parado em clareiras, observando o mundo ao seu redor como se estivesse em uma profunda reflexão filosófica. Os filhotes 
@@ -49,7 +48,7 @@
                     <summary>
                         Nerdossauro <Em>Intellectusaurus geekus</Em>
                     </summary>
-                    <img src="c:\Users\felip\Downloads\CEFET\Curso HTML, CSS, JS\cefet-front-end-dino-master\imgs\nerdossauro.jpg" alt="O dinossauro nerd">
+                    <img src="imgs\nerdossauro.jpg" alt="O dinossauro nerd">
                     <p>
                         O <Strong>Nerdossauro</Strong> é, sem dúvida, o mais curioso e peculiar de todos os dinossauros. Reconhecido pela sua fixação por padrões, teorias e colecionáveis pré-históricos, 
                         esse dinossauro poderia facilmente ser encontrado nas cavernas mais silenciosas, rodeado de pedras brilhantes que ele organizava metodicamente, categorizando-as por cores e densidade.Com sua 
@@ -66,7 +65,7 @@
                     <summary>
                         Fofocassauro <Em>Gossiposaurus verbosus</Em>
                     </summary>
-                    <img src="c:\Users\felip\Downloads\CEFET\Curso HTML, CSS, JS\cefet-front-end-dino-master\imgs\fofocassauro.jpg" alt="O dinossauro maria fifi">
+                    <img src="imgs\fofocassauro.jpg" alt="O dinossauro maria fifi">
                     <p>
                         O <Strong>Fofocassauro</Strong> é a verdadeira máquina de boatos da era jurássica. Conhecido por sua língua afiada e seu insaciável apetite por novidades, ele passava mais tempo conversando 
                         do que caçando ou se protegendo de predadores. Sempre com as orelhas em pé, ele parecia ter um radar natural para captar qualquer ruído de interesse – seja um conflito entre dois Tiranossauros 
@@ -85,7 +84,7 @@
                     <summary>
                         Musculosaurus <Em>Fitnesstaurus energicus</Em>
                     </summary>
-                    <img src="c:\Users\felip\Downloads\CEFET\Curso HTML, CSS, JS\cefet-front-end-dino-master\imgs\musculossauro.jpg" alt="O dinossauro musculoso">
+                    <img src="imgs\musculossauro.jpg" alt="O dinossauro musculoso">
                     <p>
                         O <strong>Musculosaurus</strong> é o verdadeiro "rato de academia" da era jurássica, um dinossauro obcecado por ficar em forma e desenvolver sua força. Ele é facilmente reconhecido por seus músculos bem 
                         definidos, escamas brilhantes e uma postura sempre ereta, como se estivesse posando para uma competição de fisiculturismo a qualquer momento.Este dinossauro passa horas em sua 
@@ -101,7 +100,7 @@
                     <summary>
                         Punkossauro <Em>Punkosaurus rebellicus</Em>
                     </summary>
-                    <img src="c:\Users\felip\Downloads\CEFET\Curso HTML, CSS, JS\cefet-front-end-dino-master\imgs\punkossauro.jpg" alt="O dinossauro punk">
+                    <img src="imgs\punkossauro.jpg" alt="O dinossauro punk">
                     <p>
                         O <Strong>Punkossauro</Strong> é um dinossauro ousado e cheio de atitude, conhecido por sua rebeldia e estilo de vida punk. Ele é o ícone da contracultura 
                         jurássica, sempre desafiando normas e convenções, e promovendo a liberdade de expressão.Com escamas de cores vibrantes e um impressionante moicano 
